hphp/hack/test/typecheck/expression_trees/splice2.php.like_types.exp
File "splice2.php", line 10, characters 8-22:
Typing error (Typing[4110])
  File "splice2.php", line 10, characters 8-22:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice2.php", line 5, characters 25-53:
  But got `dynamic` because it is an unenforceable type
